# FeldmanCousins

./: .gitignore  README.md  pyproject.toml
config/: example_fc_config.json
output/example_fc_output/: fc_results.json  fc_results.npz
pyfc/: __init__.py  binned.py  config.py  generate_config.py  optimizers.py  orchestrator.py  plotting.py  toys.py  unbinned.py
src/: binned.py  config.py  optimizers.py  orchestrator.py  plotting.py  toys.py  unbinned.py
