[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFC"
version = "0.1.0"
description = "A modular framework for Feldman-Cousins confidence interval calculations."
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]